FIX alignment in icons in footer

--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -271,7 +271,7 @@
  */
 .fa-lg {
   font-size: 1.33333333em;
-  line-height: 0.75em;
+  /* line-height: 0.75em; */
   vertical-align: -15%;
 }
 .fa-2x {
